# students

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/migrations/2018-12-09-212532_student/: up.sql
api/src/: main.rs
api/src/routes/: users.rs
api/templates/: base.html.tera  dashboard.html.tera
migrations/2018-12-09-212532_student/: down.sql  up.sql
migrations/2018-12-15-173948_users/: up.sql
src/: auth.rs  main.rs  models.rs  schema.rs  sql_pool.rs
src/js/: package.json
src/js/src/: Login.tsx
src/js/src/Components/: Grid.tsx  Hero.tsx  LoginForm.js  Notification.js  Page.tsx  Section.tsx
src/routes/: classes.rs  mod.rs  students.rs  users.rs
src/rust/: main.rs  schema.rs
src/rust/routes/: mod.rs  students.rs  users.rs
templates/: base.html.tera  login.html.tera
web/: package.json
web/src/: App.js  Login.js  index.js
web/src/Components/: Dashboard.js  LoginForm.js
web/src/Components/auth/: Login.js  LoginForm.js
web/src/Components/common/: Box.js  Grid.js  Hero.js  Notification.js  Page.js  Section.js  Tabs.js
web/src/Components/dashboard/: Dashboard.js
web/src/Components/students/: StudentView.js  Students.js
