[package]
name = "api"
version = "0.1.0"
authors = ["Lenard Pratt <striderman34@gmail.com>"]
edition = "2018"

[dependencies]
rocket= "0.4.0"
serde = "*"
serde_derive = "*"
chrono = "0.4.6"
dotenv = "*"
r2d2 = "*"
jsonwebtoken = "5"
ring="*"
rand="*"
data-encoding = "2.1.1"
pbkdf2 = "0.3.0"
[dependencies.rocket_contrib]
version ="0.4.0"

[dependencies.diesel]
version = "1.3.3"
features= ["r2d2","chrono","mysql"]